third_party/move/move-compiler-v2/tests/checking/typing/declare_wrong_type.exp

Diagnostics:
error: cannot adapt `S` to annotated type `R`
  ┌─ tests/checking/typing/declare_wrong_type.move:6:13
  │
6 │         let S { g } : R;
  │             ^^^^^^^

error: cannot adapt `S` to annotated type `R`
  ┌─ tests/checking/typing/declare_wrong_type.move:7:14
  │
7 │         let (S { g }, R { f }): (R, R);
  │              ^^^^^^^
